# DynGraphql

./: .gitignore  DynGraphQL.cabal  default.nix  nixpkgs.json  nixpkgs.nix  shell.nix
src/: Main.hs
static/: index.html  style.css
