Name:                DynGraphql
Version:             0.1
License:             Apache-2.0
Author:              Kaushik Chakraborty
Maintainer:          git@kaushikc.org
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable DynGraphql
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.2,
    papa                      >= 0.3.1 && < 0.4,
    snap                      >= 1.0   && < 1.2,
    graphql-api               <=0.3.0


  default-extensions:  NoImplicitPrelude


  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
